K8s/manual/networking/routes/auth-service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-service-route
  labels:
    app: togather
    service: auth-srv
spec:
  parentRefs:
    - name: togather-gateway
      namespace: envoy-gateway
  
  # hostnames:
  # - "api.togather.com"
  
  rules:
    # Health check endpoint - rewrite /api/v1/auth/health to /api/v1/health
    - matches:
        - path:
            type: Exact
            value: /api/v1/auth/health
      
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /api/v1/health
      
      backendRefs:
        - name: auth-srv
          port: 3000
    
    # Auth endpoints
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/auth
      
      backendRefs:
        - name: auth-srv
          port: 3000
